fix: handle overlap issues on topic modals

--- a/src/scss/Homepage/homepage-topics.scss
+++ b/src/scss/Homepage/homepage-topics.scss
@@ -15,6 +15,7 @@
     .--modal {
       width: 269px;
       left: 47%;
+      padding: 20px;
 
       &.-box-0 {
         top: 20%;
